<resources>
    <string name="app_name">QRcode finall scanner</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="xyz">xyz</string>
    <string name="check_your_bank_activities_and_all_storry_about_thispicvvture_check_your_bank_activities_and_all_storry_about_thispicture">Check your bank activities and all storry about thispicture Check your bank activities and all storry about thispicture</string>
    <string name="listening">Listening</string>
    <string name="the_story">The Story</string>
    <string name="title_for_this_picture">Title for this Picture</string>
    <string name="next">next</string>
</resources>
